feat: add branch books aggregates and complelte create books service, pending test
