# internal/services/books/internal/books/features/create_books/gin_endpoints/create_books.go
@@ -2,44 +2,45 @@ package ginendpoints
 
 import (
 	customizegin "github.com/Leon180/go-event-driven-microservices/internal/pkg/customize_gin"
-	"github.com/Leon180/go-event-driven-microservices/internal/services/books/internal/books/dtos"
+	featuresdtos "github.com/Leon180/go-event-driven-microservices/internal/services/books/internal/books/features/create_books/dtos"
 	"github.com/Leon180/go-event-driven-microservices/internal/services/books/internal/books/features/create_books/services"
 	"github.com/gin-gonic/gin"
 )
 
-type createBookImpl struct {
-	createBookService services.CreateBook
+type createBooksImpl struct {
+	createBooksService services.CreateBooks
 }
 
-func NewCreateBook(
-	createBookService services.CreateBook,
+func NewCreateBooks(
+	createBooksService services.CreateBooks,
 ) customizegin.Endpoint {
-	return &createBookImpl{
-		createBookService: createBookService,
+	return &createBooksImpl{
+		createBooksService: createBooksService,
 	}
 }
 
-func (endpoint *createBookImpl) MapEndpoint(router *gin.RouterGroup) {
-	router.POST("/book/create", endpoint.Handle)
+func (endpoint *createBooksImpl) MapEndpoint(router *gin.RouterGroup) {
+	router.POST("/books/create", endpoint.Handle)
 }
 
-// @Summary Create a new book
-// @Description Create a new book
+// @Summary Create books by branch id, start date and end date
+// @Description Create books by branch id, start date and end date
 // @Tags books
 // @Accept json
 // @Produce json
-// @Param book body dtos.Book true "Book"
-// @Success 200 {object} customizegin.JSONResponse "Book created successfully"
-// @Router /book/create [post]
-func (endpoint *createBookImpl) Handle(c *gin.Context) {
-	var createBookRequest dtos.Book
-	if err := c.ShouldBindJSON(&createBookRequest); err != nil {
+// @Param book body featuresdtos.CreateBooksRequest true "Book"
+// @Success 200 {object} customizegin.JSONResponse "Books created successfully"
+// @Router /books/create [post]
+func (endpoint *createBooksImpl) Handle(c *gin.Context) {
+	var createBooksRequest featuresdtos.CreateBooksRequest
+	if err := c.ShouldBindJSON(&createBooksRequest); err != nil {
 		customizegin.ResponseError(c, nil, "", err)
 		return
 	}
-	if err := endpoint.createBookService.CreateBook(c.Request.Context(), &createBookRequest); err != nil {
-		customizegin.ResponseError(c, nil, "", err)
+	books, err := endpoint.createBooksService.CreateBooks(c.Request.Context(), &createBooksRequest)
+	if err != nil {
+		customizegin.ResponseError(c, books, "", err)
 		return
 	}
-	customizegin.ResponseSuccess(c, nil, "book created successfully")
+	customizegin.ResponseSuccess(c, nil, "books created successfully")
 }
